--- a/account/templates/reset_password_email.html
+++ b/account/templates/reset_password_email.html
@@ -10,15 +10,15 @@
         <tr>
             <td>
                 <div style="padding:20px 35px 40px;">
-                    <h2 style="font-weight:bold;margin-bottom:5px;font-size:14px;">Hello, {{ username }}:</h2>
+                    <h2 style="font-weight:bold;margin-bottom:5px;font-size:14px;">សួស្តី {{ username }}</h2>
                     <p style="margin-top:20px">
-                    Please click <a href="{{ link }}">{{ link }}</a> to reset your password in 20 minutes.
+                    លោកអ្នកអាចចុចតំណភ្ជាប់មួយនះ <a href="{{ link }}" target="_blank">{{ link }}</a> ដើម្បីប្តូរលេខសម្ងាត់ថ្មីរបស់លោកអ្នក​ ដែលមានសុពុលភាពត្រឹមតែ ២០នាទី។
                     </p>
                     <p style="margin-top:20px">
-                    To protect your account, please do not use simple passwords.
+                    ដើម្បីគណនីរបស់លោកអ្នក មានសុវត្ថិភាពខ្ពស់សូមប្រើប្រាស់លេខសម្ងាត់ខ្លាំង។
                     </p>
                     <p style="margin-top:20px">
-                    If you still have any questions, please contract system administrator.
+                    ប្រសិនបើលោកអ្នកមានចម្ងល់ឬបញ្ហាអ្វីមួយជាមួយវេបសាយពួកយើង លោកអ្នកអាចទាក់ទង admin បានតាមរយ៖ ហ្វេសប៊ុក។ 
                     </p>
                     <p style="margin-left:2em;"></p>
                     <p style="text-indent:0;text-align:right;">{{ website_name }}</p>
@@ -29,8 +29,8 @@
         </tbody>
         <tfoot>
             <th valign="middle" style="height:38px;color:#fff; font-size:13px;line-height:38px; font-weight:bold;text-align:left;padding:10px 24px 6px; border-bottom:1px solid #467ec3;background:#1a263a;border-radius:5px 5px 0 0; text-align: center;">
-                Thanks for using our website. 
-                <br>Checkout facebook support on <a href="https://fb.com/groups/sakcode" >សាកកូដ - Sak Code</a> 
+                សូមអរគុណសម្រាប់ការប្រើប្រាស់ វេបសាយពូកយើង!
+                <br>Checkout facebook support on <a href="https://fb.com/groups/sakcode"​ target="_blank" >សាកកូដ - Sak Code</a> 
             </th>
         </tfoot>
     </table>
