--- a/account/templates/reset_password_email.html
+++ b/account/templates/reset_password_email.html
@@ -12,13 +12,13 @@
                 <div style="padding:20px 35px 40px;">
                     <h2 style="font-weight:bold;margin-bottom:5px;font-size:14px;">សួស្តី {{ username }}</h2>
                     <p style="margin-top:20px">
-                    លោកអ្នកអាចចុចតំណភ្ជាប់មួយនះ <a href="{{ link }}" target="_blank">{{ link }}</a> ដើម្បីប្តូរលេខសម្ងាត់ថ្មីរបស់លោកអ្នក​ ដែលមានសុពុលភាពត្រឹមតែ ២០នាទី។
+                    លោកអ្នកអាចចុចតំណភ្ជាប់មួយនេះ <a href="{{ link }}" target="_blank">{{ link }}</a> ដើម្បីប្តូរលេខសម្ងាត់ថ្មីរបស់លោកអ្នក​ ដែលមានសុពុលភាពត្រឹមតែ ២០នាទី។
                     </p>
                     <p style="margin-top:20px">
                     ដើម្បីគណនីរបស់លោកអ្នក មានសុវត្ថិភាពខ្ពស់សូមប្រើប្រាស់លេខសម្ងាត់ខ្លាំង។
                     </p>
                     <p style="margin-top:20px">
-                    ប្រសិនបើលោកអ្នកមានចម្ងល់ឬបញ្ហាអ្វីមួយជាមួយវេបសាយពួកយើង លោកអ្នកអាចទាក់ទង admin បានតាមរយ៖ ហ្វេសប៊ុក។ 
+                    ប្រសិនបើលោកអ្នកមានចម្ងល់ឬបញ្ហាអ្វីមួយជាមួយវេបសាយពួកយើង លោកអ្នកអាចទាក់ទង admin បានតាមរយ៖ ហ្វេសប៊ុក ឬ អ៊ីម៊ែល។ 
                     </p>
                     <p style="margin-left:2em;"></p>
                     <p style="text-indent:0;text-align:right;">{{ website_name }}</p>
