--- a/account/templates/register_account.html
+++ b/account/templates/register_account.html
@@ -12,7 +12,7 @@
                 <div style="padding:20px 35px 40px;">
                     <h2 style="font-weight:bold;margin-bottom:5px;font-size:14px;">សួស្តី {{ username }} </h2>
                     <p style="margin-top:20px">
-                        <span style="font-weight:bold;font-size:16px;">{{ website_name }}</span> ជាកម្មវិធីសិក្សាថ្មីមួយសម្រាប់សិស្សនិស្សិត ដើម្បីសិក្សាស្រាវជ្រាវពង្រឹងសមត្ថភាពការគិត ដោះស្រាយបញ្ហាគណិតវិទ្យាបំរើក្នុងវិស័យបច្ចេកវិទ្យា និងជីវភាពរស់នៅ។ ពួកយើងមានគោលបំណង ឱ្យសិស្សនិស្សិតកម្ពុជាមានសមត្ថភាព អាចចូលរួមការប្រកូតប្រជែងដោះស្រាយបញ្ហាជាមួយប្រទេសដទៃផងដែរ។​
+                        <span style="font-weight:bold;font-size:16px;">{{ website_name }}</span> ជាកម្មវិធីសិក្សាថ្មីមួយសម្រាប់សិស្សនិស្សិត ដើម្បីសិក្សាស្រាវជ្រាវពង្រឹងសមត្ថភាពការគិត ដោះស្រាយបញ្ហាគណិតវិទ្យាបំរើក្នុងវិស័យបច្ចេកវិទ្យា និងជីវភាពរស់នៅ។ ពួកយើងមានគោលបំណង ឱ្យសិស្សនិស្សិតកម្ពុជាមានសមត្ថភាព អាចចូលរួមការប្រកួតប្រជែងដោះស្រាយបញ្ហាជាមួយប្រទេសដទៃផងដែរ។​
                     </p>
                     <img src="{{ website_base_url }}/static/img/home.93ef60a.png" width="100%" alt="Sak Code ជាកម្មវិធីហ្វឹកហាត់កូដ តេស្តសមត្ថភាពជាភាសាខ្មែរ">
                     <br>
@@ -20,7 +20,7 @@
                         សូមអរគុណលោកអ្នកដែលបានចុះឈ្មោះប្រើប្រាស់ <b>សាកកូដ Sak Code</b>. Your username is: <b>{{ username }}</b> and your email is: <b>{{ email }}</b>
                     </p>
                     <p style="margin-top:20px">
-                        លោកអ្នកអាចចូល ដោះស្រាយលំហាត់ក្នុងវេបសាយពួកយើងបានហើយ តាមរយៈតំណមួយនេះ <a href="{{ link }}" target="_blank">{{ link }}</a> 
+                        លោកអ្នកអាចចូល ដោះស្រាយលំហាត់ក្នុងវេបសាយពួកយើងបានហើយ តាមរយៈតំណភ្ជាប់មួយនេះ <a href="{{ link }}" target="_blank">{{ link }}</a> 
                     </p>
                     <p style="margin-left:2em;"></p>
                     <p style="text-indent:0;text-align:right;">{{ website_name }}</p>
