--- a/account/templates/register_account.html
+++ b/account/templates/register_account.html
@@ -12,15 +12,15 @@
                 <div style="padding:20px 35px 40px;">
                     <h2 style="font-weight:bold;margin-bottom:5px;font-size:14px;">សួស្តី {{ username }} </h2>
                     <p style="margin-top:20px">
-                        <span style="font-weight:bold;font-size:16px;">{{ website_name }}</span> ជាកម្មវិធីសិក្សាថ្មីមួយសម្រាប់សិស្សនិស្សិត ដើម្បីសិក្សាស្រាវជ្រាវពង្រឹងសមត្ថភាពការគិត ដោះស្រាយបញ្ហាគណិតវិទ្យាបំរើក្នុងវិស័យបច្ចេកវិទ្យា និងជីវភាពរស់នៅ។ ពួកយើងមានគោលបំណង ឱ្យសិស្សនិស្សិតកម្ពុជាមានសមត្ថភាព អាចចូលរួមការប្រកួតប្រជែងដោះស្រាយបញ្ហាជាមួយប្រទេសដទៃផងដែរ។​
+                        <span style="font-weight:bold;font-size:16px;">{{ website_name }}</span> ជាកម្មវិធីសិក្សាថ្មីមួយសម្រាប់សិស្សនិស្សិតអាចហ្វឹកហាត់សរសេរកូដ ដើម្បីសិក្សាស្រាវជ្រាវពង្រឹងសមត្ថភាពការគិត ដោះស្រាយបញ្ហាគណិតវិទ្យា។
                     </p>
                     <img src="https://sakcode.net/static/img/home.93ef60a.png" width="100%" alt="Sak Code ជាកម្មវិធីហ្វឹកហាត់កូដ តេស្តសមត្ថភាពជាភាសាខ្មែរ">
                     <br>
                     <p style="margin-top:20px">
-                        សូមអរគុណលោកអ្នកដែលបានចុះឈ្មោះប្រើប្រាស់ <b>សាកកូដ Sak Code</b>. Your username is: <b>{{ username }}</b> and your email is: <b>{{ email }}</b>
+                        សូមអរគុណលោកអ្នកដែលបានចុះឈ្មោះប្រើប្រាស់ <b>សាកកូដ Sak Code</b>. ​<br>Your username is: <b>{{ username }}</b> <br>Your email is: <b>{{ email }}</b>
                     </p>
                     <p style="margin-top:20px">
-                        លោកអ្នកអាចចូល ដោះស្រាយលំហាត់ក្នុងវេបសាយពួកយើងបានហើយ តាមរយៈតំណភ្ជាប់មួយនេះ <a href="{{ link }}" target="_blank">{{ link }}</a> 
+                        លោកអ្នកអាចសាកល្បងដោះស្រាយលំហាត់ជាមួយសាកកូដបានហើយ តាមរយៈតំណភ្ជាប់មួយនេះ <a href="{{ link }}" target="_blank">{{ link }}</a> 
                     </p>
                     <p style="margin-left:2em;"></p>
                     <p style="text-indent:0;text-align:right;">{{ website_name }}</p>
@@ -31,7 +31,7 @@
         </tbody>
         <tfoot>
             <th valign="middle" style="height:38px;color:#fff; font-size:13px;line-height:38px; font-weight:bold;text-align:left;padding:10px 24px 6px; border-bottom:1px solid #467ec3;background:#1a263a;border-radius:5px 5px 0 0; text-align: center;">
-                <br>Checkout facebook support on <a href="https://fb.com/groups/sakcode" style="color:white;" target="_blank" >សាកកូដ - Sak Code</a> 
+                <br>ចូលរួមមតិក្នុងក្រុម៖ <a href="https://www.facebook.com/groups/sakcode" style="color:white;" target="_blank" >សាកកូដ - Sak Code</a> 
             </th>
         </tfoot>
     </table>
