--- a/account/templates/reset_password_email.html
+++ b/account/templates/reset_password_email.html
@@ -30,7 +30,7 @@
         <tfoot>
             <th valign="middle" style="height:38px;color:#fff; font-size:13px;line-height:38px; font-weight:bold;text-align:left;padding:10px 24px 6px; border-bottom:1px solid #467ec3;background:#1a263a;border-radius:5px 5px 0 0; text-align: center;">
                 សូមអរគុណសម្រាប់ការប្រើប្រាស់ វេបសាយពូកយើង!
-                <br>Checkout facebook support on <a href="https://fb.com/groups/sakcode"​ target="_blank" >សាកកូដ - Sak Code</a> 
+                <br>ចូលរួមមតិក្នុងក្រុម៖ <a href="https://www.facebook.com/groups/sakcode" style="color:white;" target="_blank" >សាកកូដ - Sak Code</a> 
             </th>
         </tfoot>
     </table>
